--- a/sticky/test/basic.html
+++ b/sticky/test/basic.html
@@ -11,11 +11,15 @@
             width: 100px;
             height: 100px;
             background: red;
-            margin-top: 2000px;
+        }
+        .block {
+            height: 1000px;
+            border: 1px solid black;
         }
     </style>
 </head>
 <body>
+    <div class="block">BLOCK</div>
     <div class="sticky data-sticky-elem" data-sticky-top="0"></div>
 </body>
 </html>
