add readme file in lazyload

--- a/lazyload/test/specifyCallbackFunction.html
+++ b/lazyload/test/specifyCallbackFunction.html
@@ -12,11 +12,13 @@
 		<li class="data-lazy-elem" id="third"></li>
 	</ul>
 	<script type="text/javascript">
-		Util.lazyload(function (cur, remain, origin) {
-			console.log("-----------------------------------")
-			console.log("cur--->", cur);
-			console.log("remain--->", remain);
-			console.log("origin--->", origin);
+		Util.lazyload({
+			scrollIntoView: function (cur, remain, origin) {
+				console.log("-----------------------------------")
+				console.log("cur--->", cur);
+				console.log("remain--->", remain);
+				console.log("origin--->", origin);
+			}
 		});
 	</script>
 </body>
